Upgraded react-widget@4.4.3

--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "font-awesome": "^4.6.3",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
     "react-bootstrap": "^0.31.0",
+    "react-dom": "^16.4.1",
     "react-overlays": "^0.8.3",
     "react-redux": "^5.0.0",
     "react-select-plus": "^1.2.0",
-    "react-widgets": "^3.4.2",
+    "react-widgets": "^4.4.3",
+    "react-widgets-moment": "^4.0.19",
     "redux-autoform-utils": "1.0.6-experimental"
   },
   "devDependencies": {
@@ -67,7 +68,7 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "mocha": "^3.0.0",
-    "moment": "^2.14.1",
+    "moment": "^2.22.2",
     "multer": "^1.2.0",
     "npm": "^4.0.5",
     "numbro": "^1.9.1",
